--- a/Front/Study/Day08/joinPage.html
+++ b/Front/Study/Day08/joinPage.html
@@ -8,8 +8,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join Page</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+
+
     <link rel="stylesheet" href="mainStyle.css">
+
     <style>
+        *{
+            font-family: 'Jua', sans-serif;
+        }
         div.contents>div.joinBox {
             margin: auto;
             width: 600px;
@@ -63,7 +73,7 @@
         <h3>joinPage.html</h3>
 
         <div class="joinBox">
-            <form action="memberJoin" method="get">
+            <form action="memberJoin" method="get" onsubmit="return joinFormCheck(this)">
                 <table>
                     <tr>
                         <th colspan="2">회원가입</th>
@@ -81,11 +91,11 @@
                     </tr>
                     <tr>
                         <th>비밀번호</th>
-                        <td><input type="text"></td>
+                        <td><input type="text" id="userPw"></td>
                     </tr>
                     <tr>
                         <th>이름</th>
-                        <td><input type="text"></td>
+                        <td><input type="text" name="userName"></td>
                     </tr>
                     <tr>
                         <th>생년월일</th>
@@ -106,6 +116,16 @@
                         </td>
                     </tr>
                     <tr>
+                        <th>주소</th>
+                        <td>
+                            <input type="text" id="sample6_postcode" placeholder="우편번호">
+                            <input type="button" onclick="sample6_execDaumPostcode()" value="우편번호 찾기"><br>
+                            <input type="text" id="sample6_address" placeholder="주소"><br>
+                            <input type="text" id="sample6_detailAddress" placeholder="상세주소">
+                            <input type="text" id="sample6_extraAddress" placeholder="참고항목">
+                        </td>
+                    </tr>
+                    <tr>
                         <th colspan="2">
                             <button type="submit">회원가입</button>
                         </th>
@@ -119,6 +139,58 @@
     <div class="footer">
         <h2>하단영역</h2>
     </div>
+
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    
+    <script>
+        function sample6_execDaumPostcode() {
+            new daum.Postcode({
+                oncomplete: function (data) {
+                    // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+
+                    // 각 주소의 노출 규칙에 따라 주소를 조합한다.
+                    // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+                    var addr = ''; // 주소 변수
+                    var extraAddr = ''; // 참고항목 변수
+
+                    //사용자가 선택한 주소 타입에 따라 해당 주소 값을 가져온다.
+                    if (data.userSelectedType === 'R') { // 사용자가 도로명 주소를 선택했을 경우
+                        addr = data.roadAddress;
+                    } else { // 사용자가 지번 주소를 선택했을 경우(J)
+                        addr = data.jibunAddress;
+                    }
+
+                    // 사용자가 선택한 주소가 도로명 타입일때 참고항목을 조합한다.
+                    if (data.userSelectedType === 'R') {
+                        // 법정동명이 있을 경우 추가한다. (법정리는 제외)
+                        // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
+                        if (data.bname !== '' && /[동|로|가]$/g.test(data.bname)) {
+                            extraAddr += data.bname;
+                        }
+                        // 건물명이 있고, 공동주택일 경우 추가한다.
+                        if (data.buildingName !== '' && data.apartment === 'Y') {
+                            extraAddr += (extraAddr !== '' ? ', ' + data.buildingName : data.buildingName);
+                        }
+                        // 표시할 참고항목이 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
+                        if (extraAddr !== '') {
+                            extraAddr = ' (' + extraAddr + ')';
+                        }
+                        // 조합된 참고항목을 해당 필드에 넣는다.
+                        document.getElementById("sample6_extraAddress").value = extraAddr;
+
+                    } else {
+                        document.getElementById("sample6_extraAddress").value = '';
+                    }
+
+                    // 우편번호와 주소 정보를 해당 필드에 넣는다.
+                    document.getElementById('sample6_postcode').value = data.zonecode;
+                    document.getElementById("sample6_address").value = addr;
+                    // 커서를 상세주소 필드로 이동한다.
+                    document.getElementById("sample6_detailAddress").focus();
+                }
+            }).open();
+        }
+    </script>
 
     <script>
         // onkeyup을 이용한 방법
@@ -165,9 +237,30 @@
 
         }
 
+        // 회원가입 체크
+        function joinFormCheck(formObj) {
+            console.log("joinFormCheck() 호출");
+            console.log(formObj);
+            console.log(formObj.userId);
+            console.log(formObj.userName);
+
+            if (formObj.userId.value.length == 0) {
+                alert('아이디를 입력해주세요.');
+                formObj.userId.focus();
+                return false;
+
+            } else if (formObj.userName.value.length == 0) {
+                alert('이름을 입력해주세요.');
+                formObj.userName.focuse();
+                return false;
+            }
+
+            return false;
+        }
+
         // domain변경
         function domainSelect(obj) {
-           document.getElementById('domain').value = obj.value;
+            document.getElementById('domain').value = obj.value;
         }
     </script>
 </body>
