--- a/Front/Study/Day08/mainPage.html
+++ b/Front/Study/Day08/mainPage.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="contents">
-        <h2>컨텐츠영역</h2>
+        <h2><i class="fa-brands fa-apple"></i> 컨텐츠영역</h2>
         <h3>mainPage.html</h3>
     </div>
 
@@ -39,5 +39,7 @@
         <h2>하단영역</h2>
     </div>
 </body>
+
+<script src="https://kit.fontawesome.com/c499993576.js" crossorigin="anonymous"></script>
 
 </html>
